--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "express",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "test",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./backend/index.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "ser": "nodemon ./server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "13.5.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -20,6 +23,11 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "autoprefixer": "^10",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "eslint": "^8",
+    "nodemon": "^3.0.1",
+    "eslint-config-next": "13.5.7"
   }
 }
