--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "ser": "nodemon ./server.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -17,8 +16,6 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "hamburger-react": "^2.5.1",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.8.4",
     "mui": "^0.0.1",
     "next": "13.5.7",
     "react": "^18",
