change file structure

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,7 +25,11 @@
       "@molecules/*": ["./src/components/molecules/*"],
       "@atoms/*": ["./src/components/atoms/*"],
       "@organisms/*": ["./src/components/organisms/*"],
-      "@templates/*": ["./src/components/templates/*"]
+      "@templates/*": ["./src/components/templates/*"],
+      "@adminMol/*": ["./src/app/(admin)/components/molecules/*"],
+      "@adminAto/*": ["./src/app/(admin)/components/atoms/*"],
+      "@adminOrg/*": ["./src/app/(admin)/components/organisms/*"],
+      "@adminTem/*": ["./src/app/(admin)/components/templates/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
