--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
+    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "hamburger-react": "^2.5.1",
