--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "hamburger-react": "^2.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mui": "^0.0.1",
     "next": "13.5.7",
     "react": "^18",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
