--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
     "recoil": "^0.7.7"
   },
