--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "instagram-scraping": "^1.0.17",
+    "instagram-web-api": "^2.2.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
+    "puppeteer": "^24.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
