--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
-    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "hamburger-react": "^2.5.1",
@@ -26,6 +25,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
     "recoil": "^0.7.7"
