--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "22.10.1",
