--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,12 @@
     "react-quill": "^2.0.0",
     "react-use": "^17.5.1",
     "recoil": "^0.7.7",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/eslint-parser": "^7.26.5",
     "@types/node": "22.10.1",
     "autoprefixer": "^10",
     "eslint": "^8",
