--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mui": "^0.0.1",
     "next": "13.5.7",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-cookie": "^7.2.2",
     "react-dom": "^18",
