--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "hamburger-react": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
