--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.5.1",
     "recoil": "^0.7.7",
     "sharp": "^0.33.5",
